reasons section + responsiviness

--- a/styles/responsiviness.css
+++ b/styles/responsiviness.css
@@ -34,16 +34,50 @@
     .planning-section div {
         padding: 10% 5%;
     }
+
+    .reasons-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .reasons-section img {
+        max-width: 100%;
+        margin-top: 1.5em;
+    }
+
+    .reasons-content > p {
+    padding: 1.2em 0;
+    }
+
+    .reasons-content div {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .reasons-content div p i {
+        padding: 0.4em;
+    }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 450px) {
+    p {
+        font-size: 1.2em;
+    }
+    
     .hero-section {
         background: transparent;
     }
 
     .hero-text h2 {
         font-size: 4.5em;
-        line-height: 100%;
+    }
+
+    .hero-section p {
+        line-height: 120%;
     }
 
     .hero-text button {
@@ -52,5 +86,16 @@
     
     .planning-section .grid-container {
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .reasons-content div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: left;
+    }
+    
+    .reasons-content div p i {
+        padding: 5px 5px 5px 0;
     }
 }
