--- a/styles/responsiviness.css
+++ b/styles/responsiviness.css
@@ -7,10 +7,23 @@
         text-align: center;
     }
 
-    .hero-text p, .hero-text h2 {
+    .hero-text, .hero-text p, .hero-text h2 {
         margin: 0;
         padding: 0;
         line-height: 100%;
+    }
+
+    .touristing-button{
+        display: flex;
+        align-items: center;
+        text-align: left;
+        width: 100%;
+        font-size: 1.5em;
+        padding: 0.6em;
+    }
+
+    .touristing-button img {
+        width: 3em;
     }
 
     .content > img {
@@ -80,8 +93,17 @@
         line-height: 120%;
     }
 
-    .hero-text button {
-        font-size: 1.2em;
+    .touristing-button{
+        display: flex;
+        align-items: center;
+        text-align: left;
+        width: 100%;
+        font-size: 2em;
+        padding: 0.6em;
+    }
+
+    .hero-text .touristing-button {
+        font-size: 1.5em;
     }
     
     .planning-section .grid-container {
@@ -97,5 +119,13 @@
     
     .reasons-content div p i {
         padding: 5px 5px 5px 0;
+    }
+
+    .catching-section p{
+        font-size: 1.5em;
+    }
+
+    .catching-section .touristing-button {
+        font-size: 1.5em;
     }
 }
