--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,10 @@ p {
     font-weight: bold;
 }
 
+.blue-span {
+    color: var(--title-blue)
+}
+
 header {
     display: flex;
     justify-content: space-around;
@@ -123,16 +127,15 @@ header nav ul li a{
     display: flex;
     flex-direction: column;
     gap: 1.75em;
-    margin-right: 5%;
+    margin-right: 10%;
 }
 
 .hero-text p {
     font-weight: bold;
     font-size: 1.5em;
-    margin-right: 10%;
 }
 
-.hero-text button{
+.touristing-button {
     background-color: var(--title-green);
     display: flex;
     justify-content: center;
@@ -140,18 +143,18 @@ header nav ul li a{
     color: #ffffff;
     font-size: 1.5em;
     font-weight: bold;
-    padding: 0.5em;
+    padding: 0.2em;
     border-radius: 100px;
     width: 100%;
 }
 
-.hero-section button:hover {
+.touristing-button:hover {
     background-color: var(--hover-green);
-    transition: 0.5s;
+    transition: 0.6s;
 }
 
-.hero-text button img {
-    width: 4em;
+.touristing-button img {
+    width: 4.5em;
 }
 
 .hero-section img {
@@ -245,6 +248,31 @@ header nav ul li a{
     border-radius: 10px;
 }
 
-.blue-span {
-    color: var(--title-blue)
+.catching-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5em;
+    text-align: center;
+    padding: 5% 10%;
+}
+
+.catching-section p {
+    font-size: 2em;
+}
+
+.catching-section .touristing-button {
+    font-size: 2em;
+    margin-top: 0.5em;
+}
+
+.catching-section 
+.touristing-button 
+img {
+    width: 4em;
+}
+
+footer {
+    display: none;
+    background-color: var(--title-green);
 }
