--- a/styles/style.css
+++ b/styles/style.css
@@ -269,10 +269,63 @@ header nav ul li a{
 .catching-section 
 .touristing-button 
 img {
+    padding: 0.3em;
     width: 4em;
 }
 
 footer {
-    display: none;
     background-color: var(--title-green);
+    color: #ffffff;
+    padding: 0 10%;
+}
+
+footer .footer-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #ffffff;
+    padding: 2em 0;
+}
+
+.footer-menu p {
+    max-width: 15vw;
+}
+
+.footer-menu nav {
+    padding: 0 3em;
+}
+
+.footer-menu nav ul li {
+    padding-bottom: 10px;
+}
+
+.footer-menu nav ul li a {
+    text-decoration: underline;
+    font-size: 1.25em;
+    color: #ffffff;
+    flex-wrap: nowrap;
+}
+
+footer .attribution {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em 0;
+    font-size: 0.8em;
+
+}
+
+footer .attribution span {
+    display: flex;
+    align-items: center;
+}
+
+footer .attribution span p {
+    font-weight: 400;
+}
+
+footer .attribution span a {
+    color: #ffffff;
+    font-size: 2.5em;
+    margin-left: 10px;
 }
