upper menu + grid not finished

--- a/styles/responsiviness.css
+++ b/styles/responsiviness.css
@@ -78,6 +78,28 @@
     footer .footer-menu p {
         display: none;
     }
+
+    footer .footer-menu, footer .attribution {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 1.5em;
+    }
+
+    .footer-menu nav {
+        border-top: 1px solid #ffffff;
+        padding-top: 1.2em;
+    }
+
+    footer .attribution {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    footer img {
+        max-width: 100%;
+    }
 }
 
 @media (max-width: 450px) {
@@ -131,23 +153,5 @@
 
     .catching-section .touristing-button {
         font-size: 1.5em;
-    }
-
-    footer .footer-menu, footer .attribution {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 1.5em;
-    }
-
-    .footer-menu nav {
-        border-top: 1px solid #ffffff;
-        padding-top: 1.2em;
-    }
-
-    footer .attribution {
-        display: flex;
-        flex-direction: column-reverse;
     }
 }
