--- a/styles/responsiviness.css
+++ b/styles/responsiviness.css
@@ -137,7 +137,7 @@
         font-size: 1.5em;
     }
     
-    .planning-section .grid-container {
+    .planning-section .grid-planning {
         grid-template-columns: repeat(1, 1fr);
     }
 
