--- a/styles/style.css
+++ b/styles/style.css
@@ -426,9 +426,9 @@ footer img {
 #mobile-menu-options {
     background-color: white;
     position: fixed;
-    height: 10%;
     width: 100%;
     bottom: 0;
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.5);
     visibility: hidden;
 }
 
